--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Viccastillo.GitHub.io : This is the Tag Line">
+    <meta name="description" content="STEMdev GitHub index : This is the Tag Line">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Viccastillo.GitHub.io</title>
+    <title>Title for website</title>
   </head>
 
   <body>
