--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/VicCastillo">View on GitHub</a>
 
-          <h1 id="project_title">Viccastillo.GitHub.io</h1>
+          <h1 id="project_title">STEMdev GitHub index</h1>
           <h2 id="project_tagline">This is the Tag Line</h2>
 
         </header>
