mod title again

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Viccastillo.GitHub.io</h1>
+          <h1>STEMdev models</h1>
           <p>This is the Tag Line</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/VicCastillo">VicCastillo</a></span>
