--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>This is the Tag Line</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/VicCastillo">VicCastillo</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; credit right </span>
         </div>
 
         <h3>
