--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <h1>STEMdev models</h1>
           <p>This is the Tag Line</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/VicCastillo">VicCastillo</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; credit right </span>
+          <span class="credits left">Project maintained by <a href="https://github.com/VicCastillo"> Vic Castillo</a></span>
+          <span class="credits right">Hosted on GitHub Pages </span>
         </div>
 
         <h3>
@@ -40,12 +40,11 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
+<pre><code>
+$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
