--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <nav>
           <li class="fork"><a href="https://github.com/VicCastillo">View On GitHub</a></li>
         </nav>
+	   <nav>
+          <li class="fork"><a href="https://github.com/VicCastillo">View On GitHub</a></li>
+        </nav>
+
+
+
       </div><!-- end header -->
 
     <div class="wrapper">
@@ -45,7 +51,6 @@ $ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
