--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li class="fork"><a href="https://github.com/VicCastillo">View On GitHub</a></li>
         </nav>
 	   <nav>
-          <li class="fork"><a href="https://github.com/VicCastillo">View On GitHub</a></li>
+          <li class="fork"><a href="https://raw.githubusercontent.com/VicCastillo/VicCastillo.github.io/master/page2.html">Page 2</a></li>
         </nav>
 
 
