--- a/LightSourceAndShadow.html
+++ b/LightSourceAndShadow.html
@@ -608,6 +608,8 @@ moved code to graph in gui">major mod</a>
 </div>
 
 
+<h1> **************VMC*************** </h1>
+
   <div id="readme" class="boxed-group flush clearfix announce instapaper_body md">
     <h3>
       <span class="octicon octicon-book"></span>
