--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 ---
 <!doctype html>
 <html>
-  <head>
+  <head> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{site.modelname}} From STEM-Dev</title>
+    <title>{{site.modelname}} From STEM-Dev IO</title>
     <link rel="stylesheet" href="stylesheets/VMC-styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
-  <body>
+  <body>  
       <div id="header">
         <nav>
           <li class="fork">     <a href="{{site.preurl}}{{site.baseurl}}">View On GitHub</a></li>
